@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* Added regexp, list and dictionary validators
 * Now add option to option_order if inclue is True
 * Updated the docstring for Section.write
 * Added a QuickValidator class which can be passed a lambda to restore old confmanager functionality
